--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  lint: ^1.8.2  # for app performance
+  sizer: ^2.0.15  #  for responsive ui
+  get: ^4.6.1  # state management
+
 
 dev_dependencies:
   flutter_test:
