--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  lint: ^1.8.2  # for app performance
+  lint: ^1.8.2  # for better app performance
   sizer: ^2.0.15  #  for responsive ui
   get: ^4.6.1  # state management
+  dio: ^4.0.4
 
 
 dev_dependencies:
