--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   get: ^4.6.1  # state management
   dio: ^4.0.4
 
+  ## UI
+  carousel_slider: ^4.0.0
+
 
 dev_dependencies:
   flutter_test:
